--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
 
     <!--CreditsSTART-->
     <string name="credits_schedule"><u>График платежей</u></string>
-    <string name="creditsDebt">%1$d тг</string>
+    <string name="creditsDebt">%1$d %2$s</string>
     <string name="creditsNextDateDue">Рекомендуем оплатить до %1$s</string>
     <string name="creditsDealTotalDebt">Сумма полного погашения %1$d %2$s</string>
     <plurals name="creditsLeftDays">
